Add improvements for SSL and windows compilationy

--- a/viral.conf
+++ b/viral.conf
@@ -3,7 +3,7 @@ complete_directory = ./downloads
 incoming_directory = ./tmp
 pid_file = ./download/viral.pid
 listening_port = 6688
-encryption = yes
+encryption = no
 user_name = smallharlequin
 log_level = 5
 log_buffer_size = 1000
